# M4300API_helpers

./: .clinerules  .clinerules.critical  .env.example  .env.template  .flake8  .gitignore  .human.clinerules.md  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
docs/dev/: architecture.md  systematic_verification.md  task_transition.md  todo.md
docs/dev/components/: build_switch_url.md  make_api_call.md  using_make_api_call.md
docs/dev/mcp_info/: endpoint_doc_template.txt  info_doc_POST_login.txt  info_doc_login.txt  info_doc_logout.txt  info_dog_GET_device_info.txt
docs/dev/tasks/: mcp_server_setup.md  new_endpoint_helper_prompt.md
mcp_server/: package-lock.json  package.json  tsconfig.json
mcp_server/src/: index.ts
scripts/: create_endpoint_helper.sh
src/login/: README.md  login.py
src/logout/: README.md  logout.py
src/m4300api_helpers/: __init__.py  client.py  config.py  exceptions.py  http_helpers.py
src/m4300api_helpers/device_info/: README.md  __init__.py  device_info.py
src/m4300api_helpers/login/: README.md  __init__.py  login.py
src/m4300api_helpers/logout/: README.md  __init__.py  logout.py
tests/: conftest.py  test_device_info.py  test_device_info_integration.py  test_http_helpers.py  test_login.py  test_login_integration.py  test_logout.py  test_logout_integration.py
tests/fixtures/: api_responses.py
tests/integration/: test_live_switch.py
tests/unit/: test_client.py  test_config.py
